# commonmeta

./: Cargo.toml  README.md  build_jni.sh  build_wasm.sh
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/ovh/sad/commonmeta/: CommonMetaParser.java  NativeUtils.java
src/: jni_bindings.rs  lib.rs  parser.pest  wasm.rs
typescript/: README.md  index.d.ts  index.ts  package.json  test.ts
